css/index.css
/*
Wolfson Colors
Red color: #CE2328
Blue color: #24336D
*/

body { 
    margin: 0;
    padding: 0;
}

* {
    font-family: Courier, monospace;
    color: inherit;
}

h2 {
    margin: 0px;
}

a {
    text-decoration: none;
}

/*header*/
#header {
    background-color: #CE2328;
    padding: 0.5% 0.5%;
    box-shadow: 0px 3px white, 0px 6px #24336D;
    display: flex;
    justify-content: space-between;
}
#header-left {
    background-color: white;
    padding: 0.3% 0.7%;
    border: solid #24336D;
    border-radius: 0.5em;
    outline: 3px solid white;
}
#header-right {
    background-color: white;
    padding: 0.3% 0.7%;
    border: solid #24336D;
    border-radius: 0.5em;
    outline: 3px solid white;
}
#header-title {
    font-weight: bolder;
}
.header-element {
    text-align: center;
    vertical-align: middle;
    color: #24336D;
}
.header-icon {
    width: 1.75em;
    border-radius: 100%;
}

/*fotter*/
#footer {
    background-color: #CE2328;
    padding: 2% 3%;
    box-shadow: 0px -3px white, 0px -6px #24336D;
    display: flex;
    justify-content:space-between;
    color: white;
}
#footer-left {
    display: flex;
}
#footer-left > * {
    margin-right: 2em;
}
#footer-icon {
    width: 35%;
    background-color: white;
    border: solid #24336D;
    border-radius: 0.5em;
    outline: 3px solid white;
}
.footer-links {
    width: 10em;
    padding-left: 0px;
    justify-content: space-evenly;
    display: block;
}
.footer-links-title {
    color: white;
    margin: 0px;
    font-size: large;
    margin-left: 5%;
}
.footer-link-hr {
    margin: 2% 0px;
    border-color: white;
    border-style: solid;
    border-width: 5%;
}
.footer-link {
    list-style-type: none;
    font-size: 90%;
    margin-left: 5%;
}
.footer-link > * {
    color: #f8f8f8;
    font-weight: bold;
    white-space: nowrap;
}
/*When the link has the mouse cursor hovered over*/
.footer-link > *:hover {
    font-size: 110%;
    text-decoration: underline;
}
#footer-right {
    display: flex;
    align-items: flex-end;
    font-weight: bold;
}
#footer-affiliation {
    font-size: 65%;
    color: #f8f8f8;
    margin: 0px;
    padding: 0px;
}

/*sections*/
.section {
    margin: 5% 2.5%;
}
.title-card {
    background-color: #CE2328;
    font-size: 200%;
    padding: 1.4% 1%;
    color: white;
    text-shadow: -2px 2px 1px #24336D;
    box-shadow: 0px 3px white, 0px 6px #24336D;
    margin-bottom: 1.5%;
}

/*intro section */
#title-sec {
    display: inline-block;
    vertical-align: middle;
    margin-left: 15%; margin-right: 15%;
    text-align: center;
    align-items: center;
    margin-top: 2.5%;
}
.wolfson-line-break {
    height: 7px;
    background-color: #CE2328;
    border-color: transparent;
    box-shadow: 0px 3px white, 0px 6px #24336D;
}

/* title when it was just text
#title {
    color: #CE2328;
    font-size: 450%;
    margin-bottom: 0px;
    text-shadow: -2px 2px 1px #24336D;
}
*/
#title {
    width: 80%;
}

/*robot section*/
#robot-info {
    display: grid;
    grid-template-columns: auto 100%;
    column-gap: 1%;
}

/*team section*/
#team-info {
    display: flex;
    justify-content: flex-end;
    gap: 1%;
}

